[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ids"
version = "0.1.0"
dependencies = ["numpy", "tqdm"]
authors = [
    {name = "Adityanarayanan Radhakrishnan", email = "aradha@mit.edu"},
    {name = "Yajit Jain", email = "yajit@broadinstitute.org"},
    {name = "Caroline Uhler", email = "cuhler@mit.edu"},
    {name = "Eric S. Lander", email = "eric@broadinstitute.org"},
]

description = "Library for computing InterDependence Scores (linear runtime measure of dependence)."
license = {text = "MIT"}
requires-python = ">=3.7"

[project.optional-dependencies]
torch = ["torch"]
